--- a/install/Brewfile
+++ b/install/Brewfile
@@ -1,5 +1,6 @@
 tap "homebrew/bundle"
 tap "lotyp/homebrew-formulae"
+tap "homebrew/cask-fonts"
 
 # core/dotfiles
 brew "bats-core"
@@ -48,3 +49,20 @@ brew "webp"
 
 # misc
 brew "grip"
+
+# casks
+cask "docker"
+cask "proton-drive"
+cask "firefox"
+cask "font-fira-code"
+cask "font-hack"
+cask "google-chrome"
+cask "google-chrome@canary"
+cask "hammerspoon"
+cask "maccy"
+cask "raycast"
+cask "slack"
+cask "sourcetree"
+cask "spotify"
+cask "visual-studio-code"
+cask "vlc"
